emmisions schedule and homepage links
homepage links to 5G documentation added, updated 5G banner image, inclueded warning on FCC CBRS misuse, wording fixes

--- a/docs/5g-on-helium/5g-on-helium.mdx
+++ b/docs/5g-on-helium/5g-on-helium.mdx
@@ -50,6 +50,11 @@ allows for the creation of a Mobile subDAO, which rewards 5G Hotspot operators w
 the existing Helium blockchain. This will immediately allow any online 5G Hotspot with a Small Cell
 Radio to mine MOBILE tokens. Mobile mining is only available in the US at this time.
 
+50B MOBILE tokens are pre-mined as specified in the
+[Economics Overview](https://github.com/helium/HIP/blob/main/0053-mobile-dao.mdeconomics-overview)
+and assigned to a wallet held by the Helium Foundation. A total of 250B MOBILE tokens are allocated
+to the subDAO. Foundation.
+
 :::note Mainnet Validator latest Beta build: v1.12.1
 
 The core team has tagged a beta release v1.12.1. This build provides support for the MOBILE token
