--- a/docs/home.mdx
+++ b/docs/home.mdx
@@ -33,13 +33,21 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 <div class="container" style={{ padding: 0 }}>
   <div class="row">
     <div class="col col--12">
-      <h2>5G MOBILE Mining</h2>
+      <img className="homeicon" src={useBaseUrl('img/5g-on-helium/5gheader.png')} />
     </div>
-    <div class="col col--12">
-      <img className="homeicon" src={useBaseUrl('img/5g-on-helium/5gheader-comingsoon.png')} />
+    <div class="col col--6">
+      <h1 className="bigger">Helium 5G</h1>
+      <h2 className="subtitle">5G comes to the People's Network.</h2>
     </div>
-    <div class="col col--12">
-      <p>5G MOBILE mining announced at Consensus. More details coming soon. </p>
+    <div class="col col--6">
+      <a className="quicklink quicklinkgreen" href="/5g-on-helium">
+        Learn about 5G on Helium
+        <img className="quicklinkarrow" src={useBaseUrl('img/quicklinkarrow.svg')} />
+      </a>
+      <a className="quicklink quicklinkblue" href="/5g-on-helium/mining-5g">
+        Learn about mining MOBILE
+        <img className="quicklinkarrow" src={useBaseUrl('img/quicklinkarrow.svg')} />
+      </a>
     </div>
   </div>
 </div>
