--- a/docs/5g-on-helium/5g-on-helium.mdx
+++ b/docs/5g-on-helium/5g-on-helium.mdx
@@ -50,7 +50,7 @@ the existing Helium blockchain. This will immediately allow any online 5G Hotspo
 Radio to mine MOBILE tokens. Mobile mining is only available in the US at this time.
 
 50B MOBILE tokens are pre-mined as specified in the
-[Economics Overview](https://github.com/helium/HIP/blob/main/0053-mobile-dao.mdeconomics-overview)
+[Economics Overview](https://github.com/helium/HIP/blob/main/0053-mobile-dao.md#economics-overview)
 and assigned to a wallet held by the Helium Foundation. A total of 250B MOBILE tokens are allocated
 to the subDAO. Foundation.
 
