Apply suggestions from code review
Co-authored-by: Abhay Kumar <75+abhay@users.noreply.github.com>

--- a/docs/5g-on-helium/5g-on-helium.mdx
+++ b/docs/5g-on-helium/5g-on-helium.mdx
@@ -45,9 +45,9 @@ the Helium ecosystem.
 ## Helium 5G Rollout
 
 The passing of [HIP 51: Helium DAO](https://github.com/helium/HIP/blob/main/0051-helium-dao.md)
-allows for the creation of a Mobile subDAO, which rewards 5G Hotspot operators with MOBILE token on
+allows for the creation of a MOBILE tokens that will reward 5G Hotspot operators on
 the existing Helium blockchain. This will immediately allow any online 5G Hotspot with a Small Cell
-Radio to mine MOBILE tokens. Mobile mining is only available in the US at this time.
+Radio to mine MOBILE tokens.
 
 50B MOBILE tokens are pre-mined as specified in the
 [Economics Overview](https://github.com/helium/HIP/blob/main/0053-mobile-dao.md#economics-overview)
@@ -64,6 +64,6 @@ It enables transactions that can create the new MOBILE subnetwork and assign a p
 MOBILE tokens on the chain. When activated, this will enable MOBILE token mining by online 5G
 radios.
 
-Further information about emission schedule can be found [here](/5g-on-helium/5g-on-helium).
+Further information about emission schedule can be found [here](/5g-on-helium/mining-5g#emissions-curve).
 
 :::
