trimmed tables and revisions

--- a/docs/5g-on-helium/5g-on-helium.mdx
+++ b/docs/5g-on-helium/5g-on-helium.mdx
@@ -34,6 +34,16 @@ More information about CBRS can be found on the
 5G Hotspots can participate in providing 5G cellular coverage when connected to Indoor or Outdoor
 CBRS Small Cell Radios while also participating in providing LoRaWAN coverage.
 
+:::info
+
+[Helium Discord](https://discord.gg/helium) is the best place to get real-time support from the
+community.
+
+The [#5g-cbrs](discord://discord.com/channels/404106811252408320/836735476659912754) channel is most
+relevant for using the Network.
+
+:::
+
 ## Network of Networks
 
 With the passing of
@@ -45,25 +55,10 @@ the Helium ecosystem.
 ## Helium 5G Rollout
 
 The passing of [HIP 51: Helium DAO](https://github.com/helium/HIP/blob/main/0051-helium-dao.md)
-allows for the creation of a MOBILE tokens that will reward 5G Hotspot operators on
-the existing Helium blockchain. This will immediately allow any online 5G Hotspot with a Small Cell
-Radio to mine MOBILE tokens.
+allows for the creation of a MOBILE tokens that will reward 5G Hotspot operators on the existing
+Helium blockchain. This will immediately allow any online 5G Hotspot with a Small Cell Radio to mine
+MOBILE tokens.
 
-50B MOBILE tokens are pre-mined as specified in the
+50B of 250B MOBILE is pre-mined as specified in the
 [Economics Overview](https://github.com/helium/HIP/blob/main/0053-mobile-dao.md#economics-overview)
-and assigned to a wallet held by the Helium Foundation. A total of 250B MOBILE tokens are allocated
-to the subDAO. Foundation.
-
-:::note Mainnet Validator latest Beta build: v1.12.1
-
-The core team has tagged a beta release v1.12.1. This build provides support for the MOBILE token
-issuance as defined and approved by the community in
-[HIP 51: Helium DAO](https://github.com/helium/HIP/blob/main/0051-helium-dao.md).
-
-It enables transactions that can create the new MOBILE subnetwork and assign a pre-mined amount of
-MOBILE tokens on the chain. When activated, this will enable MOBILE token mining by online 5G
-radios.
-
-Further information about emission schedule can be found [here](/5g-on-helium/mining-5g#emissions-curve).
-
-:::
+50B of 250B MOBILE is pre-mined and deposited to the Helium Foundation.
