--- a/docs/5g-on-helium/mining-5g.mdx
+++ b/docs/5g-on-helium/mining-5g.mdx
@@ -28,7 +28,7 @@ found during onboarding from individual 5G Hotspot Makers.
 
 Misrepresentation of a CBRS radio’s installation information, including GPS location, height,
 antenna orientation or other characteristics, in a SAS is a violation of FCC regulations and may
-result in fines or criminal penalties.
+result in fines and/or criminal penalties.
 
 :::
 
@@ -52,6 +52,14 @@ Install Helium Wallet app to manage HNT/Mobile token.
 Once the 5G rewards are activated, and given correct installation, the 5G Hotspot will start earning
 MOBILE automatically.
 
+:::tip
+
+Be sure to update the Helium Wallet app to the latest version. More information can be found on the
+[#announcements](discord://discord.com/channels/404106811252408320/730418759298318346) channel in
+[Helium Discord](https://discord.gg/helium)
+
+:::
+
 ## Emissions Curve
 
 There will be a max supply of 250B MOBILE with issuance halvenings of every 2 years aligned with the
@@ -61,63 +69,18 @@ and will continue on a 2 year cycle afterward.
 This allocation is distributed throughout the shortened 1 year period to online 5G Hotspots on an
 epochal basis, weighted by Small Cell model.
 
+:::info
+
+More details on weighting will be added to this document in the future.
+
+:::
+
 For clarity, the emission schedule is as follows:
 
-| Week |    Date    | Weekly Emmision |    Phase     | Standardized | Cumulative |
-| :--: | :--------: | :-------------: | :----------: | :----------: | :--------: |
-|  1   | 07/11/2022 |      0.64       |   Genesis    |     0.50     |    0.64    |
-|  2   | 07/18/2022 |      0.64       |   Genesis    |     0.50     |    1.28    |
-|  3   | 07/25/2022 |      0.64       |   Genesis    |     0.50     |    1.93    |
-|  4   | 08/01/2022 |      1.28       | 5G POC Start |     1.00     |    3.21    |
-|  5   | 08/08/2022 |      1.28       | 5G POC Start |     1.00     |    4.49    |
-|  6   | 08/15/2022 |      1.28       | 5G POC Start |     1.00     |    5.78    |
-|  7   | 08/22/2022 |      1.28       | 5G POC Start |     1.00     |    7.06    |
-|  8   | 08/29/2022 |      1.28       | 5G POC Start |     1.00     |    8.34    |
-|  9   | 09/05/2022 |      1.28       | 5G POC Start |     1.00     |    9.63    |
-|  10  | 09/12/2022 |      1.28       | 5G POC Start |     1.00     |   10.91    |
-|  11  | 09/19/2022 |      1.28       | 5G POC Start |     1.00     |   12.19    |
-|  12  | 09/26/2022 |      1.28       | 5G POC Start |     1.00     |   13.48    |
-|  13  | 10/03/2022 |      1.28       | 5G POC Start |     1.00     |   14.76    |
-|  14  | 10/10/2022 |      1.28       | 5G POC Start |     1.00     |   16.04    |
-|  15  | 10/17/2022 |      1.28       | 5G POC Start |     1.00     |   17.33    |
-|  16  | 10/24/2022 |      1.28       | 5G POC Start |     1.00     |   18.61    |
-|  17  | 10/31/2022 |      1.28       | 5G POC Start |     1.00     |   19.89    |
-|  18  | 11/07/2022 |      1.28       | 5G POC Start |     1.00     |   21.18    |
-|  19  | 11/14/2022 |      1.28       | 5G POC Start |     1.00     |   22.46    |
-|  20  | 11/21/2022 |      1.28       | 5G POC Start |     1.00     |   23.74    |
-|  21  | 11/28/2022 |      1.28       | 5G POC Start |     1.00     |   25.03    |
-|  22  | 12/05/2022 |      1.28       | 5G POC Start |     1.00     |   26.31    |
-|  23  | 12/12/2022 |      1.28       | 5G POC Start |     1.00     |   27.59    |
-|  24  | 12/19/2022 |      1.28       | 5G POC Start |     1.00     |   28.88    |
-|  25  | 12/26/2022 |      1.28       | 5G POC Start |     1.00     |   30.16    |
-|  26  | 01/02/2023 |      1.28       | 5G POC Start |     1.00     |   31.44    |
-|  27  | 01/09/2023 |      1.28       | 5G POC Start |     1.00     |   32.73    |
-|  28  | 01/16/2023 |      1.28       | 5G POC Start |     1.00     |   34.01    |
-|  29  | 01/23/2023 |      1.28       | 5G POC Start |     1.00     |   35.29    |
-|  30  | 01/30/2023 |      1.28       | 5G POC Start |     1.00     |   36.58    |
-|  31  | 02/06/2023 |      1.28       | 5G POC Start |     1.00     |   37.86    |
-|  32  | 02/13/2023 |      1.28       | 5G POC Start |     1.00     |   39.14    |
-|  33  | 02/20/2023 |      1.28       | 5G POC Start |     1.00     |   40.43    |
-|  34  | 02/27/2023 |      1.28       | 5G POC Start |     1.00     |   41.71    |
-|  35  | 03/06/2023 |      1.28       | 5G POC Start |     1.00     |   42.99    |
-|  36  | 03/13/2023 |      1.28       | 5G POC Start |     1.00     |   44.28    |
-|  37  | 03/20/2023 |      1.28       | 5G POC Start |     1.00     |   45.56    |
-|  38  | 03/27/2023 |      1.28       | 5G POC Start |     1.00     |   46.84    |
-|  39  | 04/03/2023 |      1.28       | 5G POC Start |     1.00     |   48.13    |
-|  40  | 04/10/2023 |      1.28       | 5G POC Start |     1.00     |   49.41    |
-|  41  | 04/17/2023 |      1.28       | 5G POC Start |     1.00     |   50.69    |
-|  42  | 04/24/2023 |      1.28       | 5G POC Start |     1.00     |   51.97    |
-|  43  | 05/01/2023 |      1.28       | 5G POC Start |     1.00     |   53.26    |
-|  44  | 05/08/2023 |      1.28       | 5G POC Start |     1.00     |   54.54    |
-|  45  | 05/15/2023 |      1.28       | 5G POC Start |     1.00     |   55.82    |
-|  46  | 05/22/2023 |      1.28       | 5G POC Start |     1.00     |   57.11    |
-|  47  | 05/29/2023 |      1.28       | 5G POC Start |     1.00     |   58.39    |
-|  48  | 06/05/2023 |      1.28       | 5G POC Start |     1.00     |   59.67    |
-|  49  | 06/12/2023 |      1.28       | 5G POC Start |     1.00     |   60.96    |
-|  50  | 06/19/2023 |      1.28       | 5G POC Start |     1.00     |   62.24    |
-|  51  | 06/26/2023 |      1.28       | 5G POC Start |     1.00     |   63.52    |
-|  52  | 07/03/2023 |      1.28       | 5G POC Start |     1.00     |   64.81    |
-|  53  | 07/10/2023 |      1.28       | 5G POC Start |     1.00     |   66.09    |
+|  Phase  | Weekly Emmision |
+| :-----: | --------------: |
+| Genesis |     640,000,000 |
+| 5G PoC  |   1,280,000,000 |
 
 ## How Do Hotspots Earn Helium MOBILE Tokens?
 
@@ -128,15 +91,9 @@ During the Genesis Period, 5G Hotspots will earn MOBILE by reporting their statu
 an automatic process of reporting to the Blockchain that the Small Cell Radio is online and
 registered with the SAS.
 
-| Reward Type | Chain Variable | Description                                                             |
-| :---------- | :------------- | :---------------------------------------------------------------------- |
-| Heartbeat   | `UNKNOWN`      | Rewarded to any 5G Hotspot that maintains a valid connection to the SAS |
-
-**_Do I Have To Actively Participate to Earn Rewards Once My 5G Hotspot is Deployed?_**
-
-No. Once your 5G Hotspot is completely deployed and fully synced with the Helium blockchain, you as
-the owner are not required to do anything else in order to earn MOBILE. Your 5G Hotspot will perform
-all of the above activities on its own while it runs.
+Once your 5G Hotspot is completely deployed and fully synced with the Helium blockchain, you as the
+owner are not required to do anything else in order to earn MOBILE. Your 5G Hotspot will perform all
+of its activities on its own and will be rewarded for maintaining a valid connection to the SAS.
 
 ### Indoor Small Cells
 
@@ -158,5 +115,5 @@ Spectrum Access System (SAS) to operate. Please be sure to evaluate your locatio
 install these Small Cell Radios, and consider hiring a professional to ensure your installation is
 secure and meets all regulatory requirements.
 
-SAS registration is expected to be completed within 24 hours of submission, Hosts will be contacted
-via email with a rejection reply and an explanation of what needs to be corrected.
+SAS registration is expected to be completed within 24 hours of submission, Hotspot Owners will be
+contacted via email with a rejection reply and an explanation of what needs to be corrected.
