Apply suggestions from code review
Co-authored-by: Abhay Kumar <75+abhay@users.noreply.github.com>

--- a/docs/5g-on-helium/5g-on-helium.mdx
+++ b/docs/5g-on-helium/5g-on-helium.mdx
@@ -61,4 +61,4 @@ MOBILE tokens.
 
 50B of 250B MOBILE is pre-mined as specified in the
 [Economics Overview](https://github.com/helium/HIP/blob/main/0053-mobile-dao.md#economics-overview)
-50B of 250B MOBILE is pre-mined and deposited to the Helium Foundation.
+and deposited to the Helium Foundation.
