--- a/docs/5g-on-helium/mining-5g.mdx
+++ b/docs/5g-on-helium/mining-5g.mdx
@@ -77,11 +77,12 @@ More details on weighting will be added to this document in the future.
 
 For clarity, the emission schedule is as follows:
 
-|  Phase  | Weekly Emmision |
+|  Phase  | Weekly Emission |
 | :-----: | --------------: |
 | Genesis |     640,000,000 |
 | 5G PoC  |   1,280,000,000 |
 
+The Helium Foundation will work with the core developers to begin the Genesis period of MOBILE rewards. This will be paid out of the Foundation's pre-mined MOBILE rewards pool. The rate of rewards, as defined above, is half that defined in HIP 53 and will be proportionally distributed to all active 5G radios as described below.
 ## How Do Hotspots Earn Helium MOBILE Tokens?
 
 The Helium blockchain rewards 5G Hotspots for providing 5G wireless coverage and verifying the
