Apply suggestions from code review
Co-authored-by: Abhay Kumar <75+abhay@users.noreply.github.com>

--- a/docs/5g-on-helium/mining-5g.mdx
+++ b/docs/5g-on-helium/mining-5g.mdx
@@ -112,7 +112,7 @@ These less powerful Small Cell Radios are ideal for indoor installations, such a
 bars, grocery stores, etc. Indoor Small Cell Radios are generally easier to install and create a
 shorter range, localized area of 5G coverage.
 
-Indoor Small Cell Radios are physically smaller radios and can be installed at any height. It is
+Indoor Small Cell Radios are physically smaller radios and can be installed at any height.
 Installing an Indoor Small Cell outdoors is not recommended as they are not weather resistant.
 
 ### Outdoor Small Cells
