--- a/docs/5g-on-helium/5g-on-helium.mdx
+++ b/docs/5g-on-helium/5g-on-helium.mdx
@@ -55,7 +55,7 @@ the Helium ecosystem.
 ## Helium 5G Rollout
 
 The passing of [HIP 51: Helium DAO](https://github.com/helium/HIP/blob/main/0051-helium-dao.md)
-allows for the creation of a MOBILE tokens that will reward 5G Hotspot operators on the existing
+allows for the creation of MOBILE tokens that will reward 5G Hotspot operators on the existing
 Helium blockchain. This will immediately allow any online 5G Hotspot with a Small Cell Radio to mine
 MOBILE tokens.
 
