--- a/docs/5g-on-helium/5g-on-helium.mdx
+++ b/docs/5g-on-helium/5g-on-helium.mdx
@@ -44,6 +44,30 @@ relevant for using the Network.
 
 :::
 
+### Outdoor Small Cells
+
+These Small Cell Radios are more Powerful than Indoor Small Cell Radios and are typically
+weatherized to endure the elements. Outdoor Small Cell Radios create a larger area of 5G coverage
+while requiring a bit more planning when installing and maintaining.
+
+Outdoor Small Cells require installation above ground level and require registration with the
+Spectrum Access System (SAS) to operate. Please be sure to evaluate your locations and ability to
+install these Small Cell Radios, and consider hiring a professional to ensure your installation is
+secure and meets all regulatory requirements.
+
+SAS registration is expected to be completed within 24 hours of submission, Hotspot Owners will be
+contacted via email with a confirmation of successful registration, or with a rejection reply and an
+explanation of what needs to be corrected.
+
+### Indoor Small Cells
+
+These less powerful Small Cell Radios are ideal for indoor installations, such as coffee shops,
+bars, grocery stores, etc. Indoor Small Cell Radios are generally easier to install and create a
+shorter range, localized area of 5G coverage.
+
+Indoor Small Cell Radios are physically smaller radios and can be installed at any height. It is
+Installing an Indoor Small Cell outdoors is not recommended as they are not weather resistant.
+
 ## Network of Networks
 
 With the passing of
