--- a/docs/5g-on-helium/mining-5g.mdx
+++ b/docs/5g-on-helium/mining-5g.mdx
@@ -19,26 +19,33 @@ reward basics.
 
 ## How To Mine MOBILE
 
-Mining MOBILE and providing 5G coverage requires a Helium Hotspot and a compatible CBRS Small Cell
-Radio. These components can be purchased as a bundle or separately. All 5G Hotspots must be online
-and registered in the SAS (Spectrum Access System) maintained by the FCC to earn rewards. Specific
-instructions can be found during onboarding from individual 5G Hotspot Makers.
+Mining MOBILE and providing 5G coverage requires a 5G Helium Hotspot and a compatible CBRS Small
+Cell Radio. These components can be purchased as a bundle or separately. All 5G Hotspots must be
+online and registered in the SAS (Spectrum Access System) maintained by the FCC to earn MOBILE
+rewards.
+
+Instructions on installing a CBRS Small Cell Radio and registration with the SAS is provided by the
+individual 5G Hotspot Makers. As an example, see the Freedomfi installation guides as a reference
+here:
+
+- [Freedomfi Indoor Install Guide](https://freedomfi.com/freedomfi-indoor-cbrs-small-cell-setup-guide/)
+- [Freedomfi Outdoor Install Guide](https://freedomfi.com/freedomfi-outdoor-cbrs-small-cell-setup-guide/)
 
 :::warning
 
-Misrepresentation of a CBRS radio’s installation information, including GPS location, height,
-antenna orientation or other characteristics, in a SAS is a violation of FCC regulations and may
-result in fines and/or criminal penalties.
+Misrepresentation of a CBRS Radio installation information, including GPS location, height, antenna
+orientation or other characteristics, in a SAS is a violation of FCC regulations and may result in
+fines and/or criminal penalties.
 
 :::
 
-Once the Hotspot is onboarded and Small Cell is physically installed and connected to the Hotspot,
-it should automatically appear in the Radio Dashboard on the local IP address.
+Once the 5G Hotspot is onboarded and Small Cell Radio is physically installed and connected to the
+5G Hotspot, it should automatically appear in the Radio Dashboard on the local IP address.
 
-[http://freedomfi-gateway.local/](http://freedomfi-gateway.local/)
+> [http://freedomfi-gateway.local/](http://freedomfi-gateway.local/)
 
-5G Hotspots will appear on explorer.helium.com between 2-4 days, depending on how quickly it is
-registered in the SAS.
+5G Hotspots will appear on [explorer.helium.com](https://explorer.helium.com/) between 2-4 days,
+depending on how quickly it is registered in the SAS.
 
 ### Install Helium Wallet app to manage HNT/MOBILE token.
 
@@ -55,6 +62,19 @@ Be sure to update the Helium Wallet app to the latest version. More information 
 [Helium Discord](https://discord.gg/helium)
 
 :::
+
+## How Do Hotspots Earn Helium MOBILE Tokens?
+
+The Helium blockchain rewards 5G Hotspots for providing 5G wireless coverage and verifying the
+Helium Network. 5G Hotspots are rewarded in the Helium MOBILE Token.
+
+During the Genesis Period, 5G Hotspots will earn MOBILE by reporting their status via a “heartbeat”,
+an automatic process of reporting to the Blockchain that the Small Cell Radio is online and
+registered with the SAS.
+
+Once your 5G Hotspot is completely deployed and fully synced with the Helium blockchain, you as the
+owner are not required to do anything else in order to earn MOBILE. Your 5G Hotspot will perform all
+of its activities on its own and will be rewarded for maintaining a valid connection to the SAS.
 
 ## Emissions Curve
 
@@ -77,54 +97,73 @@ rewards. This will be paid out of the Foundation's pre-mined MOBILE rewards pool
 rewards, as defined above, is half that defined in HIP 53 and will be proportionally distributed to
 all active 5G radios as described below.
 
-## How Do Hotspots Earn Helium MOBILE Tokens?
-
-The Helium blockchain rewards 5G Hotspots for providing 5G wireless coverage and verifying the
-Helium Network. 5G Hotspots are rewarded in the Helium MOBILE Token.
-
-During the Genesis Period, 5G Hotspots will earn MOBILE by reporting their status via a “heartbeat”,
-an automatic process of reporting to the Blockchain that the Small Cell Radio is online and
-registered with the SAS.
-
-Once your 5G Hotspot is completely deployed and fully synced with the Helium blockchain, you as the
-owner are not required to do anything else in order to earn MOBILE. Your 5G Hotspot will perform all
-of its activities on its own and will be rewarded for maintaining a valid connection to the SAS.
-
-### Small Cell Radio Model Reward Scaling
+## Small Cell Type Reward Scaling
 
 All properly installed and registered 5G Hotspots will earn rewards for participating on the
 Network. A rewards unit multiple is applied to the various Small Cell Models based on whether they
 are indoor or outdoor, as well as their power output, as follows:
 
-| Model           | Reward Scaler |  Small Cell Type   |
-| --------------- | :-----------: | :----------------: |
-| Nova 436H       |      2x       | High Power Outdoor |
-| Nova 430i       |     1.5x      |      Outdoor       |
-| Sercomm Outdoor |     1.5x      |      Outdoor       |
-| Sercomm Indoor  |      1x       |       Indoor       |
-| Neutrino 430    |      1x       |       Indoor       |
+| Model           | Reward Weight | Small Cell Type    |
+| :-------------- | :-----------: | :----------------- |
+| Nova 436H       |     2.0x      | High Power Outdoor |
+| Nova 430i       |     1.5x      | Outdoor            |
+| Sercomm Outdoor |     1.5x      | Outdoor            |
+| Sercomm Indoor  |     1.0x      | Indoor             |
+| Neutrino 430    |     1.0x      | Indoor             |
 
-Inidividual rewards per period are calculated as a proporation of the total weighted rewards units.
+Individual rewards per period are calculated as a proporation of the total weighted reward units.
 
-### Indoor Small Cells
+## Earnings Example
 
-These less powerful Small Cell Radios are ideal for indoor installations, such as coffee shops,
-bars, grocery stores, etc. Indoor Small Cell Radios are generally easier to install and create a
-shorter range, localized area of 5G coverage.
+Earnings are calculated in 3 steps
 
-Indoor Small Cell Radios are physically smaller radios and can be installed at any height.
-Installing an Indoor Small Cell outdoors is not recommended as they are not weather resistant.
+1. Calculate the Total Emmisions Weight and Emmisions Weight Ratio for each Small Cell Type
+2. Each Small Cell Type is allocated its ratio of the total rewards in the given epoch
+3. Each 5G Hotspot is rewarded from its respective rewards pool by Small Cell Type
 
-### Outdoor Small Cells
+As an example, we can calculate the rewards for an Outdoor 5G Hotspot in a single epoch assuming the
+following:
 
-These Small Cell Radios are more Powerful than Indoor Small Cell Radios and are typically
-weatherized to endure the elements. Outdoor Small Cell Radios create a larger area of 5G coverage
-while requiring a bit more planning when installing and maintaining.
+- 100,000 MOBILE Rewarded per epoch
+- 100 High Power Outdoor 5H Hotspots earn rewards
+- 400 Outdoor 5G Hotspots earn rewards
+- 500 Indoor 5G Hotspots earn rewards
 
-Outdoor Small Cells require installation above ground level and require registration with the
-Spectrum Access System (SAS) to operate. Please be sure to evaluate your locations and ability to
-install these Small Cell Radios, and consider hiring a professional to ensure your installation is
-secure and meets all regulatory requirements.
+### Reward Ratios
 
-SAS registration is expected to be completed within 24 hours of submission, Hotspot Owners will be
-contacted via email with a rejection reply and an explanation of what needs to be corrected.
+Calculate the Total Emmisions Weight and Emmisions Weight Ratio for each Small Cell Type:
+
+In this example, the Total EMmisions Weight it 1,300 and the Ratios are as follows (rounded for ease
+of understanding)
+
+```bash
+  (High Power Outdoor Count * 2.0)    =>    200  =>  200 / 1,300  => 16%
++            (Outdoor Count * 1.5)    =>  + 600  =>  600 / 1,300  => 46%
++             (Indoor Count * 1.0)    =>  + 500  =>  500 / 1,300  => 38%
+------------------------------------      ------
+                                          1,300
+```
+
+### Small Cell Type Pool
+
+Each Small Cell Type is allocated its ratio of the total rewards in the given epoch
+
+> Small Cell Type Reward Pool = Epoch Rewards \* Weighted Small Cell Type Ratio
+
+```bash
+High Power Outdoor  => 100,000 * 16% = 16,000 MOBILE
+Outdoor             => 100,000 * 46% = 46,000 MOBILE
+Indoor              => 100,000 * 38% = 38,000 MOBILE
+```
+
+### Rewards Per 5G Hotspot
+
+Each 5G Hotspot is rewarded from its respective rewards pool by Small Cell Type
+
+> Reward Per Epoch = Small Cell Type Reward Pool / Number of Small Cell of that Type
+
+```bash
+High Power Outdoor  => 16,000 / 100 =  153 MOBILE per 5G Hotspot
+Outdoor             => 46,000 / 400 =  115 MOBILE per 5G Hotspot
+Indoor              => 38,000 / 500 =   77 MOBILE per 5G Hotspot
+```
