--- a/docs/5g-on-helium/mining-5g.mdx
+++ b/docs/5g-on-helium/mining-5g.mdx
@@ -117,11 +117,11 @@ Individual rewards per period are calculated as a proporation of the total weigh
 
 Earnings are calculated in 3 steps
 
-1. Calculate the Total Emmisions Weight and Emmisions Weight Ratio for each Small Cell Type
+1. Calculate the Total Emissions Weight and Emissions Weight Ratio for each Small Cell Type
 2. Each Small Cell Type is allocated its ratio of the total rewards in the given epoch
 3. Each 5G Hotspot is rewarded from its respective rewards pool by Small Cell Type
 
-As an example, we can calculate the rewards for an Outdoor 5G Hotspot in a single epoch assuming the
+As an example, we can calculate the rewards for a 5G Hotspot in a single epoch assuming the
 following:
 
 - 100,000 MOBILE Rewarded per epoch
@@ -131,9 +131,9 @@ following:
 
 ### Reward Ratios
 
-Calculate the Total Emmisions Weight and Emmisions Weight Ratio for each Small Cell Type:
+Calculate the Total Emissions Weight and Emissions Weight Ratio for each Small Cell Type:
 
-In this example, the Total EMmisions Weight it 1,300 and the Ratios are as follows (rounded for ease
+In this example, the Total Emissions Weight it 1,300 and the Ratios are as follows (rounded for ease
 of understanding)
 
 ```bash
