--- a/docs/5g-on-helium/mining-5g.mdx
+++ b/docs/5g-on-helium/mining-5g.mdx
@@ -25,11 +25,11 @@ online and registered in the SAS (Spectrum Access System) maintained by the FCC 
 rewards.
 
 Instructions on installing a CBRS Small Cell Radio and registration with the SAS is provided by the
-individual 5G Hotspot Makers. As an example, see the Freedomfi installation guides as a reference
+individual 5G Hotspot Makers. As an example, see the FreedomFi installation guides as a reference
 here:
 
-- [Freedomfi Indoor Install Guide](https://freedomfi.com/freedomfi-indoor-cbrs-small-cell-setup-guide/)
-- [Freedomfi Outdoor Install Guide](https://freedomfi.com/freedomfi-outdoor-cbrs-small-cell-setup-guide/)
+- [FreedomFi Indoor Install Guide](https://freedomfi.com/freedomfi-indoor-cbrs-small-cell-setup-guide/)
+- [FreedomFi Outdoor Install Guide](https://freedomfi.com/freedomfi-outdoor-cbrs-small-cell-setup-guide/)
 
 :::warning
 
@@ -39,8 +39,9 @@ fines and/or criminal penalties.
 
 :::
 
-Once the 5G Hotspot is onboarded and Small Cell Radio is physically installed and connected to the
-5G Hotspot, it should automatically appear in the Radio Dashboard on the local IP address.
+Once the 5G Hotspot is onboarded and the Small Cell Radio is physically installed, the Small Cell
+will automatically initialize and aquire a GPS lock. Once that is complete, the Small Cell Radio
+dashboard appear under the "Radio Dashboard" tab on the local IP address.
 
 > [http://freedomfi-gateway.local/](http://freedomfi-gateway.local/)
 
@@ -93,9 +94,7 @@ For clarity, the emission schedule is as follows:
 | 5G PoC  |   1,280,000,000 |
 
 The Helium Foundation will work with the core developers to begin the Genesis period of MOBILE
-rewards. This will be paid out of the Foundation's pre-mined MOBILE rewards pool. The rate of
-rewards, as defined above, is half that defined in HIP 53 and will be proportionally distributed to
-all active 5G radios as described below.
+rewards. Genesis rewards will be paid out of the Foundation's pre-mined MOBILE rewards pool.
 
 ## Small Cell Type Reward Scaling
 
@@ -111,7 +110,7 @@ are indoor or outdoor, as well as their power output, as follows:
 | Sercomm Indoor  |     1.0x      | Indoor             |
 | Neutrino 430    |     1.0x      | Indoor             |
 
-Individual rewards per period are calculated as a proporation of the total weighted reward units.
+Individual rewards per period are calculated as a proportion of the total weighted reward units.
 
 ## Earnings Example
 
@@ -119,7 +118,7 @@ Earnings are calculated in 3 steps
 
 1. Calculate the Total Emissions Weight and Emissions Weight Ratio for each Small Cell Type
 2. Each Small Cell Type is allocated its ratio of the total rewards in the given epoch
-3. Each 5G Hotspot is rewarded from its respective rewards pool by Small Cell Type
+3. Each 5G Hotspot is proportionally rewarded from its respective rewards pool by Small Cell Type
 
 As an example, we can calculate the rewards for a 5G Hotspot in a single epoch assuming the
 following:
@@ -133,7 +132,7 @@ following:
 
 Calculate the Total Emissions Weight and Emissions Weight Ratio for each Small Cell Type:
 
-In this example, the Total Emissions Weight it 1,300 and the Ratios are as follows (rounded for ease
+In this example, the Total Emissions Weight it 1,300 and the ratios are as follows (rounded for ease
 of understanding)
 
 ```bash
@@ -146,7 +145,7 @@ of understanding)
 
 ### Small Cell Type Pool
 
-Each Small Cell Type is allocated its ratio of the total rewards in the given epoch
+Each Small Cell Type is allocated its ratio of the total rewards in the given epoch.
 
 > Small Cell Type Reward Pool = Epoch Rewards \* Weighted Small Cell Type Ratio
 
@@ -158,12 +157,12 @@ Indoor              => 100,000 * 38% = 38,000 MOBILE
 
 ### Rewards Per 5G Hotspot
 
-Each 5G Hotspot is rewarded from its respective rewards pool by Small Cell Type
+Each 5G Hotspot is rewarded from its respective rewards pool by Small Cell Type.
 
 > Reward Per Epoch = Small Cell Type Reward Pool / Number of Small Cell of that Type
 
 ```bash
-High Power Outdoor  => 16,000 / 100 =  153 MOBILE per 5G Hotspot
+High Power Outdoor  => 16,000 / 100 =  160 MOBILE per 5G Hotspot
 Outdoor             => 46,000 / 400 =  115 MOBILE per 5G Hotspot
-Indoor              => 38,000 / 500 =   77 MOBILE per 5G Hotspot
+Indoor              => 38,000 / 500 =   76 MOBILE per 5G Hotspot
 ```
