--- a/docs/5g-on-helium/mining-5g.mdx
+++ b/docs/5g-on-helium/mining-5g.mdx
@@ -121,7 +121,7 @@ Earnings are calculated in 3 steps
 3. Each 5G Hotspot is proportionally rewarded from its respective rewards pool by Small Cell Type
 
 As an example, we can calculate the rewards for a 5G Hotspot in a single epoch assuming the
-following:
+following (the below numbers are examples and may not reflect actual deployed Hotspots today):
 
 - 100,000 MOBILE Rewarded per epoch
 - 100 High Power Outdoor 5H Hotspots earn rewards
