--- a/docs/5g-on-helium/mining-5g.mdx
+++ b/docs/5g-on-helium/mining-5g.mdx
@@ -81,20 +81,22 @@ of its activities on its own and will be rewarded for maintaining a valid connec
 
 There will be a max supply of 250B MOBILE with issuance halvenings of every 2 years aligned with the
 HNT issuance halvenings. The first halving will occur on August 1, 2023 to align with HNT halving
-and will continue on a 2 year cycle afterward.
+and will continue on a 2 year cycle afterward. This creates a "stub period" as defined by
+[HIP 53: Mobile subDAO](https://github.com/helium/HIP/blob/main/0053-mobile-dao.md) which will begin
+when normal emissions of MOBILE tokens begins (and MOBILE can be redeemed by HNT in the subDAO's
+treasury). The date for this is currently TBD and dependent on core developers impelementing the HNT
+token treasury and redemption transactions on chain. This is defined as Phase 2 of
+[HIP 51: Helium DAO](https://github.com/helium/HIP/blob/main/0051-helium-dao.md) for all new
+subDAOs.
 
-This allocation is distributed throughout the shortened 1 year period to online 5G Hotspots on an
-epochal basis, weighted by Small Cell model.
+Before normal emissions of MOBILE begin,
+[HIP 51: Helium DAO](https://github.com/helium/HIP/blob/main/0051-helium-dao.md) defined an earlier
+launch of MOBILE tokens assigning a premine amount of MOBILE to the Helium Foundation. The Helium
+Foundation will work with the core developers to begin the Genesis period of MOBILE rewards. Genesis
+rewards will be paid out of the Foundation's pre-mined MOBILE rewards pool.
 
-For clarity, the emission schedule is as follows:
-
-|  Phase  | Weekly Emission |
-| :-----: | --------------: |
-| Genesis |     640,000,000 |
-| 5G PoC  |   1,280,000,000 |
-
-The Helium Foundation will work with the core developers to begin the Genesis period of MOBILE
-rewards. Genesis rewards will be paid out of the Foundation's pre-mined MOBILE rewards pool.
+Currently, the Helium Foundation intends to issue 100M tokens per day in the Genesis period and it
+will be proportionally distributed to all active 5G Small Cell Radios as described below.
 
 ## Small Cell Type Reward Scaling
 
