--- a/docs/5g-on-helium/5g-on-helium.mdx
+++ b/docs/5g-on-helium/5g-on-helium.mdx
@@ -11,8 +11,78 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 # 5G On Helium
 
-:::info Check Back Soon
+Today all mobile networks are built top-down by service providers (e.g., AT&T and Verizon in the
+United States). Future networks will likely be a hybrid of large-scaled operators and people-owned
+5G Hotspots due to demands of consumer behavior (higher bandwidth and lower latency requirements)
+and the physics of wireless radio. More data on the wireless network requires higher frequency
+bands, which requires denser networks with more nodes, which further increases the cost of site
+acquisition.
 
-MOBILE Announced at Consensus. More details coming soon.
+The Helium model decentralizes site acquisition costs and enables communities to participate in
+building reliable, high bandwidth networks using technologies like CBRS and Wi-Fi. This doesn’t
+completely replace service providers altogether. Instead, we see service providers as a critical
+component of this ecosystem.
+
+## CBRS Radios
+
+Citizens Broadband Radio Service (CBRS) is a wide broadcast 3.5Ghz band in the United States that
+does not require a tower operator to acquire spectrum licenses.
+
+More information about CBRS can be found on the
+[Federal Communications Commission Website](https://www.fcc.gov/35-ghz-band-overview)
+
+5G Hotspots can participate in providing 5G cellular coverage when connected to Indoor or Outdoor
+CBRS Small Cell Radios while also participating in providing LoRaWAN coverage.
+
+:::info
+
+[Helium Discord](https://discord.gg/helium) is the best place to get real-time support from the
+community.
+
+The [#5g-cbrs](discord://discord.com/channels/404106811252408320/836735476659912754) channel is most
+relevant for using the Network.
 
 :::
+
+### Outdoor Small Cells
+
+These Small Cell Radios are more Powerful than Indoor Small Cell Radios and are typically
+weatherized to endure the elements. Outdoor Small Cell Radios create a larger area of 5G coverage
+while requiring a bit more planning when installing and maintaining.
+
+Outdoor Small Cells require installation above ground level and require registration with the
+Spectrum Access System (SAS) to operate. Please be sure to evaluate your locations and ability to
+install these Small Cell Radios, and consider hiring a professional to ensure your installation is
+secure and meets all regulatory requirements.
+
+SAS registration is expected to be completed within 24 hours of submission, Hotspot Owners will be
+contacted via email with a confirmation of successful registration, or with a rejection reply and an
+explanation of what needs to be corrected.
+
+### Indoor Small Cells
+
+These less powerful Small Cell Radios are ideal for indoor installations, such as coffee shops,
+bars, grocery stores, etc. Indoor Small Cell Radios are generally easier to install and create a
+shorter range, localized area of 5G coverage.
+
+Indoor Small Cell Radios are physically smaller radios and can be installed at any height. It is
+Installing an Indoor Small Cell outdoors is not recommended as they are not weather resistant.
+
+## Network of Networks
+
+With the passing of
+[HIP 51: Helium DAOs](https://github.com/helium/HIP/blob/main/0051-helium-dao.md) a general
+structure for onboarding new Decentralized Network Protocols (DNPs) to the broader Helium Network
+was created. The Helium Mobile DAO with Helium 5G Hotspots are the first step in the evolution of
+the Helium ecosystem.
+
+## Helium 5G Rollout
+
+The passing of [HIP 51: Helium DAO](https://github.com/helium/HIP/blob/main/0051-helium-dao.md)
+allows for the creation of MOBILE tokens that will reward 5G Hotspot operators on the existing
+Helium blockchain. This will immediately allow any online 5G Hotspot with a Small Cell Radio to mine
+MOBILE tokens.
+
+50B of 250B MOBILE is pre-mined as specified in the
+[Economics Overview](https://github.com/helium/HIP/blob/main/0053-mobile-dao.md#economics-overview)
+and deposited to the Helium Foundation.
