--- a/docs/api/console.mdx
+++ b/docs/api/console.mdx
@@ -372,11 +372,16 @@ Device {
 
 ---
 
-### Create Device
+### Create Device 
 
 ```
 POST https://console.helium.com/api/v1/devices
 ```
+:::info
+
+This endpoint is disabled for Helium Foundation Console.
+
+:::
 
 <Tabs
   block={true}
