--- a/docs/5g-on-helium/5g-on-helium.mdx
+++ b/docs/5g-on-helium/5g-on-helium.mdx
@@ -19,11 +19,11 @@ bands, which requires denser networks with more nodes, which further increases t
 acquisition.
 
 The Helium model decentralizes site acquisition costs and enables communities to participate in
-building reliable, high bandwidth networks using technologies like CBRS and Wi-Fi. This doesn’t
+building reliable, high bandwidth networks using technologies like CBRS and Wi-Fi. This does not
 completely replace service providers altogether. Instead, we see service providers as a critical
 component of this ecosystem.
 
-## CBRS Radios
+## CBRS Small Cell Radios
 
 Citizens Broadband Radio Service (CBRS) is a wide broadcast 3.5Ghz band in the United States that
 does not require a tower operator to acquire spectrum licenses.
@@ -40,17 +40,17 @@ CBRS Small Cell Radios while also participating in providing LoRaWAN coverage.
 community.
 
 The [#5g-cbrs](discord://discord.com/channels/404106811252408320/836735476659912754) channel is most
-relevant for using the Network.
+relevant for using 5G on the network.
 
 :::
 
-### Outdoor Small Cells
+### Outdoor Small Cell Radios
 
-These Small Cell Radios are more Powerful than Indoor Small Cell Radios and are typically
-weatherized to endure the elements. Outdoor Small Cell Radios create a larger area of 5G coverage
-while requiring a bit more planning when installing and maintaining.
+Outdoor Small Cell Radios are more powerful than Indoor Small Cell Radios and are weatherized to
+endure the elements. Outdoor Small Cell Radios create a larger area of 5G coverage while requiring a
+bit more planning when installing and maintaining.
 
-Outdoor Small Cells require installation above ground level and require registration with the
+Outdoor Small Cell Radios require installation above ground level and require registration with the
 Spectrum Access System (SAS) to operate. Please be sure to evaluate your locations and ability to
 install these Small Cell Radios, and consider hiring a professional to ensure your installation is
 secure and meets all regulatory requirements.
@@ -59,22 +59,22 @@ SAS registration is expected to be completed within 24 hours of submission, Hots
 contacted via email with a confirmation of successful registration, or with a rejection reply and an
 explanation of what needs to be corrected.
 
-### Indoor Small Cells
+### Indoor Small Cell Radios
 
-These less powerful Small Cell Radios are ideal for indoor installations, such as coffee shops,
+Indoor Small Cell Radios are less powerful and are ideal for installations such as coffee shops,
 bars, grocery stores, etc. Indoor Small Cell Radios are generally easier to install and create a
-shorter range, localized area of 5G coverage.
+smaller, localized area of 5G coverage.
 
-Indoor Small Cell Radios are physically smaller radios and can be installed at any height. It is
-Installing an Indoor Small Cell outdoors is not recommended as they are not weather resistant.
+Indoor Small Cell Radios are physically smaller radios and can be installed at any height.
+Installing an Indoor Small Cell Radio outdoors is not recommended as they are not weather resistant.
 
 ## Network of Networks
 
 With the passing of
 [HIP 51: Helium DAOs](https://github.com/helium/HIP/blob/main/0051-helium-dao.md) a general
 structure for onboarding new Decentralized Network Protocols (DNPs) to the broader Helium Network
-was created. The Helium Mobile DAO with Helium 5G Hotspots are the first step in the evolution of
-the Helium ecosystem.
+was created. The Helium Mobile DAO with 5G Hotspots are the first step in the evolution of the
+Helium ecosystem.
 
 ## Helium 5G Rollout
 
