docs feedback fixes

--- a/docs/5g-on-helium/mining-5g.mdx
+++ b/docs/5g-on-helium/mining-5g.mdx
@@ -46,7 +46,7 @@ fines and/or criminal penalties.
 
 Once the 5G Hotspot is onboarded and a Small Cell Radio are physically installed, the Small Cell
 Radio will automatically initialize and aquire a GPS lock. Once that is complete, the Small Cell
-Radio dashboard appear under the "Radio Dashboard" tab on the local IP address of the 5G Hotspot.
+Radio dashboard appears under the "Radio Dashboard" tab on the local IP address of the 5G Hotspot.
 
 > [http://freedomfi-gateway.local/](http://freedomfi-gateway.local/)
 
@@ -59,7 +59,7 @@ depending on how quickly it is registered in the SAS.
 - [Google Play](https://play.google.com/store/apps/details?id=com.helium.wallet.app&gl=US)
 
 A 5G Hotspot with an attached and properly registered Small Cell Radio will start earning MOBILE
-automatically once the 5G rewards are activated on the Helium blockchain.
+automatically once the 5G rewards are activated on the Helium Blockchain.
 
 :::tip
 
@@ -71,18 +71,18 @@ Be sure to update the Helium Wallet app to the latest version. More information 
 
 ## How Do Hotspots Earn Helium MOBILE Tokens?
 
-The Helium blockchain rewards 5G Hotspots for providing 5G wireless coverage and verifying the
+The Helium Blockchain rewards 5G Hotspots for providing 5G wireless coverage and verifying the
 Helium Network. 5G Hotspots are rewarded in the Helium MOBILE Token.
 
 :::info
 
 During the Genesis Period, 5G Hotspots will earn MOBILE by reporting their status via a “heartbeat”,
-an automatic process of reporting to the Helium blockchain that the Small Cell Radio is online and
+an automatic process of reporting to the Helium Blockchain that the Small Cell Radio is online and
 registered with the SAS.
 
 :::
 
-Once a 5G Hotspot is completely deployed and fully synced with the Helium blockchain, you as the
+Once a 5G Hotspot is completely deployed and fully synced with the Helium Blockchain, you as the
 owner are not required to do anything else in order to earn MOBILE. Your 5G Hotspot will perform all
 of its activities on its own and will be rewarded for maintaining a valid connection to the SAS.
 
