downlink does not cost anything at the moment

--- a/docs/use-the-network/console/data-credits.mdx
+++ b/docs/use-the-network/console/data-credits.mdx
@@ -23,7 +23,7 @@ Not only are DCs critical for asserting new Hotspots and their location on the b
 registering OUIs and devices, but they are also used to pay for every single uplink packet that is
 sent on the Helium network including inital Joins. Downlinks, and ACKS do not require Data Credits.
 
-Every 24 bytes sent in an uplink or downlink packet cost 1 DC = $.00001.
+Every 24 bytes sent in an uplink packet cost 1 DC = $.00001.
 
 Unlike traditional wireless networks, the Helium Network has no annual fee and you only pay for data
 you use. This transaction occurs between the Miner (which runs on every Helium Hotspot) and the
